# GSMArena_Rust

./: .env.example  .gitignore  BUILD_AND_RUN.bat  BUILD_AND_RUN.sh  Cargo.toml  GITHUB_ACTIONS_SETUP.md  HYBRID_QUICKSTART.md  PHONE_LIST_OPTIMIZATION.md  QUICKSTART.md  README.md  SCRAPINGBEE_SCRAPER.md
.github/workflows/: scrape-phones-scrapingbee.yml  scrape-phones.yml
examples/: brand_scraper.rs  compare.rs  compare_phones.rs  fetch_all_brands.rs  fetch_phones.rs  multi_brand.rs  multi_brand_comparison.rs  phone_details.rs  phone_specs.rs  scrape_brand.rs  scrape_complete_database.rs  search.rs  test_brands.rs
src/: brand_scraper.rs  lib.rs  main.rs  models.rs  mongodb.rs  proxy_manager.rs  scraper.rs  scrapingbee_client.rs  utils.rs
