[package]
name = "gsmarena_scraper"
version = "0.1.0"
edition = "2021"

[dependencies]
gsmarena = "0.1.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
scraper = "0.17"
reqwest = { version = "0.11", features = ["blocking", "socks", "json"] }
regex = "1.10"
mongodb = "2.8"
tokio = { version = "1.35", features = ["full"] }
dotenv = "0.15"
chrono = { version = "0.4", features = ["serde"] }
rayon = "1.8"
futures = "0.3"
rand = "0.8"
urlencoding = "2.1"
